added dashboard stats

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -50,6 +50,8 @@ body {
 
 /* legend styles */
 .info {
+	/* text-align: center; */
+
 	padding: 6px 8px;
 	font: 14px/16px Arial, Helvetica, sans-serif;
 	background: white;
