--- a/web/css/style.css
+++ b/web/css/style.css
@@ -12,11 +12,11 @@ body,html {
 body {
 	display: grid;
 	grid-template-rows: 60px 1fr 40px;
-	grid-template-columns: 300px 1fr;
+	grid-template-columns: 250px 1fr 350px;
 	grid-template-areas: 
-	"header header"
-	"sidebar content"
-	"footer footer";
+	"header header header"
+	"sidebar content dashboard"
+	"footer footer footer";
 }
 
 .header {
@@ -25,6 +25,14 @@ body {
 	background-color: #333;
 	color: white;
 	font-size: 2em;
+}
+
+.nav {
+	grid-area: nav;
+	padding:10px;
+	background-color: #444;
+	color: white;
+	font-size: 1.2em;
 }
 
 .sidebar {
@@ -38,6 +46,10 @@ body {
 .sidebar-title {
 	color: #eee;
 }
+/* 
+.dashboard {
+	grid-area: dashboard;
+} */
 .content {
 	grid-area: content;
 }
