--- a/web/css/style.css
+++ b/web/css/style.css
@@ -18,8 +18,8 @@ h4 {
 
 body {
 	display: grid;
-	grid-template-rows: 60px 170px 1fr 40px;
-	grid-template-columns: 350px 1fr 1fr;
+	grid-template-rows: 60px 214px 1fr 40px;
+	grid-template-columns: 300px 1fr 300px;
 	grid-template-areas: 
 	"header header header"
 	"sidebar content dashboard"
@@ -65,6 +65,8 @@ body {
 } */
 .content {
 	grid-area: content;
+	resize: horizontal;
+	overflow: auto;
 }
 
 .footer {
@@ -199,4 +201,17 @@ hr {
 	background-color: #bbb;
 	height: 1px;
 	border: none;
+}
+
+#toggler {
+	
+    position: absolute;
+    margin-left: -38px;
+    margin-top: 25px;
+    font-size: 1.4em;
+    z-index: 9999;
+    background-color: #fff;
+    padding: 8px 8px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
