--- a/web/css/style.css
+++ b/web/css/style.css
@@ -20,7 +20,7 @@ h4 {
 
 body {
 	display: grid;
-	grid-template-rows: 60px 214px 1fr;
+	grid-template-rows: 60px 205px 1fr;
 	grid-template-columns: 300px 1fr 300px;
 	grid-template-areas: 
 	"header header header"
@@ -106,13 +106,14 @@ body {
 .legend {
 	line-height: 18px;
 	color: #555;
+	overflow: auto;
 }
 .legend i {
 	width: 18px;
 	height: 18px;
 	float: left;
 	margin-right: 8px;
-	opacity: 0.7;
+	/* opacity: 0.7; */
 }
 
 .item {
