--- a/web/css/style.css
+++ b/web/css/style.css
@@ -21,7 +21,7 @@ h4 {
 body {
 	display: grid;
 	grid-template-rows: 60px 225px 1fr;
-	grid-template-columns: 300px 1fr 300px;
+	grid-template-columns: 300px 1fr 400px;
 	grid-template-areas: 
 	"header header header"
 	"sidebar content dashboard"
@@ -223,6 +223,19 @@ hr {
     padding: 8px 8px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+}
+
+#toggler2 {
+	
+    position: absolute;
+    margin-left: -5px;
+    margin-top: -100px;
+    font-size: 1.4em;
+    z-index: 9999;
+    background-color: #fff;
+    padding: 8px 8px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .info {
